Remove preventDefault on one touch

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <style>
         body {
-            height: 100vh;
+            height: 100%;
             padding: 0;
             margin: 0;
-            overflow: hidden;
         }
 
         main {
@@ -60,16 +59,73 @@
             <a href="#" class="control-reset">Reset</a>
         </div>
     </main>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
+    peeaf <br>
     <script type="module">
-        import GZoomMove from "./gZoom-move.min.mjs";
+        import GZoomMove from "./gZoom-move.mjs";
 
         window.onload = () => {
             const zoom = new GZoomMove(document.querySelector('#zoom'), {
                 scale: {min: 1},
                 controls: {
-                    zoomIn : document.querySelector('.control-zoom-in'),
-                    zoomOut : document.querySelector('.control-zoom-out'),
-                    reset : document.querySelector('.control-reset')
                 }
             })
         };
